--- a/app/src/main/res/layout/camera_ui_container.xml
+++ b/app/src/main/res/layout/camera_ui_container.xml
@@ -33,29 +33,39 @@
         android:layout_margin="16dp"
         app:tint="#FFFFFF" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tvSubtitles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/btnSwitchMute"
-        android:layout_marginBottom="40dp">
+        android:layout_marginBottom="50dp"
+        android:background="#632E2D2D"
+        android:lineSpacingExtra="10dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:text="@string/text_sample"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="#FDFDFD"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tvSubtitles"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="#632E2D2D"
-            android:lineSpacingExtra="10dp"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:text="@string/text_sample"
-            android:textAlignment="center"
-            android:textAllCaps="true"
-            android:textColor="#FDFDFD"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tvSubtitlesGhost"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/btnSwitchMute"
+        android:layout_marginBottom="50dp"
+        android:background="#002E2D00"
+        android:lineSpacingExtra="10dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:text="@string/text_sample"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="#00FFFFFF"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <ImageButton
         android:id="@+id/btnSwitchMute"
