--- a/app/src/main/res/layout/camera_ui_container.xml
+++ b/app/src/main/res/layout/camera_ui_container.xml
@@ -80,4 +80,36 @@
         app:srcCompat="@drawable/ic_baseline_pause_circle_outline_24"
         app:tint="#D34A4A" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSwitchFlash">
+
+        <TextView
+            android:id="@+id/tvDetectedItem0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Debug Text: 0.78%"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/tvDetectedItem1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Debug Text: 0.78%"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/tvDetectedItem2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Debug Text: 0.78%"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
