--- a/app/src/main/res/layout/camera_ui_container.xml
+++ b/app/src/main/res/layout/camera_ui_container.xml
@@ -33,6 +33,21 @@
         android:layout_margin="16dp"
         app:tint="#FFFFFF" />
 
+    <ImageButton
+        android:id="@+id/btnSwitchVolume"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/ic_baseline_volume_up_24"
+        app:iconGravity="textEnd"
+        app:iconSize="40dp"
+        app:iconTint="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="16dp"
+        app:tint="#FFFFFF" />
+
     <TextView
         android:id="@+id/tvSubtitles"
         android:layout_width="match_parent"
