--- a/app/src/main/res/layout/camera_ui_container.xml
+++ b/app/src/main/res/layout/camera_ui_container.xml
@@ -37,15 +37,16 @@
         android:id="@+id/btnSwitchVolume"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:scaleType="fitCenter"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="50dp"
         android:background="@android:color/transparent"
-        app:srcCompat="@drawable/ic_baseline_volume_up_24"
+        android:scaleType="fitCenter"
         app:iconGravity="textEnd"
         app:iconSize="40dp"
         app:iconTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="16dp"
+        app:srcCompat="@drawable/ic_baseline_volume_up_24"
         app:tint="#FFFFFF" />
 
     <TextView
@@ -94,6 +95,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_baseline_pause_circle_outline_24"
         app:tint="#D34A4A" />
+
+    <ImageButton
+        android:id="@+id/btnCastToPC"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_margin="16dp"
+        android:layout_marginTop="94dp"
+        android:layout_marginEnd="84dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:iconGravity="textEnd"
+        app:iconSize="40dp"
+        app:iconTint="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_cast_24"
+        app:tint="#FFFFFF" />
 
     <LinearLayout
         android:layout_width="wrap_content"
