--- a/app/src/main/res/layout/camera_ui_container.xml
+++ b/app/src/main/res/layout/camera_ui_container.xml
@@ -113,6 +113,47 @@
         app:srcCompat="@drawable/ic_baseline_cast_24"
         app:tint="#FFFFFF" />
 
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/toggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/btnSwitchMute"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center"
+        app:singleSelection="true"
+        app:selectionRequired="true"
+        app:checkedButton="@id/btnWords">
+
+        <Button
+            android:id="@+id/btnNumbers"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:text="Números" />
+
+        <Button
+            android:id="@+id/btnLetters"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:text="Letras" />
+
+        <Button
+            android:id="@+id/btnWords"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:text="Palabras" />
+    </com.google.android.material.button.MaterialButtonToggleGroup>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
