Fixed inference threasholds

--- a/app/src/main/res/layout/camera_ui_container.xml
+++ b/app/src/main/res/layout/camera_ui_container.xml
@@ -121,6 +121,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btnSwitchMute"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="16dp"
         android:gravity="center"
         app:singleSelection="true"
         app:selectionRequired="true"
@@ -129,29 +130,26 @@
         <Button
             android:id="@+id/btnNumbers"
             style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="115dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:text="Números" />
+            android:textAllCaps="false"
+            android:text="123" />
 
         <Button
             android:id="@+id/btnLetters"
             style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="115dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:text="Letras" />
+            android:textAllCaps="false"
+            android:text="A-Z" />
 
         <Button
             android:id="@+id/btnWords"
             style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="115dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:text="Palabras" />
+            android:textAllCaps="false"
+            android:text="Pal" />
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
     <LinearLayout
