--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,12 +38,12 @@
             android:id="@+id/tVAppTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-black"
+            android:fontFamily="@font/baloo_thambi"
             android:gravity="center"
             android:text="@string/app_title"
             android:textAlignment="center"
             android:textColor="@color/contrast_light_blue"
-            android:textSize="40sp" />
+            android:textSize="60sp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
