--- a/app/src/main/res/layout/camera_ui_container.xml
+++ b/app/src/main/res/layout/camera_ui_container.xml
@@ -20,16 +20,18 @@
         android:layout_margin="16dp"/>
 
     <ImageButton
-        android:id="@+id/btnSwitchFlash"
+        android:id="@+id/btnSwitchChart"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:scaleType="fitCenter"
+        android:layout_margin="16dp"
+        android:layout_marginTop="16dp"
         android:background="@android:color/transparent"
-        app:srcCompat="@drawable/ic_baseline_flash_off_24"
+        android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="16dp"/>
+        app:srcCompat="@drawable/ic_baseline_visibility_24" />
 
     <ImageButton
         android:id="@+id/btnSwitchVolume"
@@ -142,13 +144,14 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/chart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@color/main_light_blue_transparent"
         android:gravity="end"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSwitchFlash">
+        app:layout_constraintTop_toBottomOf="@+id/btnSwitchChart">
 
         <LinearLayout
             android:layout_width="wrap_content"
